--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,354 @@
+= Indentation flattener
+
+A small an simple library to transform text with indentations to
+a text with extra symbols "PushIndent" and "PopIndent"
+
+This project is based on [indent_tokenizer](https://github.com/jleahred/indent_tokenizer)
+
+
+
+== Usage
+
+Add to `cargo.toml`
+[source, toml]
+----
+[dependencies]
+pending...
+----
+
+See example below
+
+
+
+== Modifs
+
+pending...
+
+
+== Indentation format
+
+Tabs are no valid on indentation grouping.
+
+Indentation "Push" and "Pop" will be inserted on each indentation level modif.
+
+
+Let's see by example.
+
+
+.Simple valid input
+----
+.....
+...
+    ....
+        ....
+        ....
+    ....
+    ....
+....
+....
+    ....
+----
+
+
+Indentation groups can have any number of spaces
+
+.Valid indentation different spaces
+----
+.....               level0
+  ....              level1  <--
+        ....        level2
+  ....              level1  <--
+  ....              level1  <--
+....                level0
+....                level0
+      ....          level1  <--
+----
+
+It's not a good idea to have same level with different spaces, but it's
+allowed when you are creating a new level.
+
+In this example, last level1 is idented with more spaces than previus ones
+
+
+
+
+.Invalid indentation
+----
+.....
+...
+    ....
+        ....
+       ....     <--  incorrect indentation
+    ....        <--  correct previous ident level
+    ....
+....
+....
+    ....
+----
+
+In order to go back a level, the indentation has to match with
+the previous on this level.
+
+As we saw in previous example, increasing level is free indentation.
+
+
+.Start line indicator
+----
+|.....
+    |.....
+    |......
+        |......
+----
+
+You can start lines with `|`, but it's optional.
+
+
+.Indentation indicator is optional
+----
+.....
+    |.....
+     ......
+     ......
+        ......
+----
+
+Look that `|` is one position previous to indentation level.
+
+
+
+It is usefull when you need to start with spaces.
+
+
+.I want to start a line with spaces
+----
+.....
+    | .....     <- This line starts with an space
+    |  ......   <- Starting with 2 spaces
+    |.....      <- starts with no spaces
+     .....      <- starting with no spaces
+     ...        <- starting with no spaces
+----
+
+
+.My line starts with a `|`
+----
+.....
+    ||.....     This line starts with a `|`
+    |......     This one starts with `.`
+----
+
+
+A line is empty when there are no content or it only has spaces (no matter how many).
+
+
+.Empty lines
+----
+.....
+    .....
+    .....
+    .....
+    .....     next line is empty
+
+    .....     next line is empty
+
+.....
+.....         next line is empty
+
+----
+
+What if I want represent empty lines?
+
+.Representing empty lines
+----
+.....
+    .....
+    .....
+    .....
+    .....     I want new line after this line
+   |
+
+    .....     and three new lines, please
+   |
+   |
+   |
+
+----
+
+`|` is quite usefull if you need to represent empty lines at end of file.
+
+Empty lines will produce new line `char`
+
+
+What if I want to represent spaces at end of line?
+
+Spaces at end of line will not be erased, therefore, you don't need to do anything about it.
+
+But could be intesting to represent it because some editors can run trailing or
+just because you can visualize it.
+
+
+.Representing spaces at end line
+----
+.....
+    .....
+    .....
+    .....
+    This line keeps 2 spaces and end  |
+    and you know it
+
+    Next line is properly indented and only has spaces
+   |   |
+
+----
+
+
+In fact, you can write `|` at end of all lines. It will be removed.
+
+Next strings, are equivalent.
+
+.`|` it's optional at end of line
+----
+.....|
+    .....|
+    .....|
+    .....|
+
+
+.....
+    .....
+    .....
+    .....
+
+----
+
+
+
+But I could need a pipe `|` at end of line
+
+.pipe at end of line
+----
+.....
+    .....
+    .....
+    .....
+    This line ends with a pipe||
+
+----
+
+
+.Pitfall
+----
+|.....
+.....   <- Invalid, remember, indentation mark | is previus to real indentation
+
+
+|.....
+ .....   <- This is OK, but not elegant
+
+
+| ....   <- I want to start with an space
+|.....   <- This is redundant, but more clear
+ 
+----
+
+
+== Output format
+
+pending...
+
+
+
+
+== API
+
+It works with concrete types vs general types (as String, u32 or usize)
+
+Concrete types::
+[source, rust]
+----
+pending...
+----
+
+
+
+
+Function to call::
+[source, rust]
+----
+pending
+----
+
+
+
+Error type::
+[source, rust]
+----
+#[derive(Debug, PartialEq)]
+pub struct Error {
+    pub line: LineNum,
+    pub desc: String,
+}
+----
+
+
+Thats all
+
+
+Look into lib.rs
+
+
+== Examples
+
+You can look into tests.rs, there are several tests.
+
+
+.Simple example
+[source, rust]
+----
+pending...
+----
+
+
+
+.Complex example
+[source, rust]
+----
+    let out = pending...("
+0
+    || 01a
+     01b
+     01c
+
+     02a
+     02b
+
+        |020a
+        ||020b
+
+        |  021a
+        |021b
+1a
+1b
+    11a
+   ||11b
+    11c
+
+    12a  ||
+   |12b  ||
+2a
+    21a
+    21b
+   |
+   |
+
+")
+----
+
+The result will be 
+
+[source, rust]
+----
+pending
+----
+
  
